// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`introspectTables should handle generated columns 1`] = `
[
  {
    "columnComments": {},
    "columns": [
      {
        "collation": null,
        "defaultExpr": "(price * quantity)",
        "generationExpr": "(price * quantity)",
        "identityGeneration": null,
        "isGenerated": true,
        "isIdentity": false,
        "name": "total",
        "nullable": false,
        "type": "numeric(10,2)",
      },
    ],
    "comment": null,
    "constraints": [],
    "indexes": [],
    "name": "products",
    "schema": "public",
    "triggers": [],
  },
]
`;

exports[`introspectTables should handle identity columns 1`] = `
[
  {
    "columnComments": {},
    "columns": [
      {
        "collation": null,
        "defaultExpr": null,
        "generationExpr": null,
        "identityGeneration": "ALWAYS",
        "isGenerated": false,
        "isIdentity": true,
        "name": "id",
        "nullable": false,
        "type": "bigint",
      },
    ],
    "comment": null,
    "constraints": [],
    "indexes": [],
    "name": "counters",
    "schema": "public",
    "triggers": [],
  },
]
`;

exports[`introspectTables should map column rows to DbTable structures 1`] = `
[
  {
    "columnComments": {},
    "columns": [
      {
        "collation": null,
        "defaultExpr": "gen_random_uuid()",
        "generationExpr": null,
        "identityGeneration": null,
        "isGenerated": false,
        "isIdentity": false,
        "name": "id",
        "nullable": false,
        "type": "uuid",
      },
      {
        "collation": "en_US.utf8",
        "defaultExpr": null,
        "generationExpr": null,
        "identityGeneration": null,
        "isGenerated": false,
        "isIdentity": false,
        "name": "name",
        "nullable": true,
        "type": "text",
      },
    ],
    "comment": null,
    "constraints": [],
    "indexes": [],
    "name": "users",
    "schema": "public",
    "triggers": [],
  },
]
`;
